<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="app_name">Pepperminty Wiki</string>
	<string name="title_pagelist">Page List</string>
	<string name="title_recentchanges">Recent Changes</string>
	<string name="title_search">Search</string>
	<string name="title_activity_settings">Settings</string>
	
	<!-- Preference Titles -->
	<string name="data_header">Data</string>
	<string name="appearance_header">Appearance</string>
	
	<!-- Messages Preferences -->
	<string name="signature_title">Your signature</string>
	<string name="settings_load_images_title">Load images</string>
	<string name="settings_theme_title">Theme</string>
	
	<!-- Sync Preferences -->
	<string name="settings_offlinemode_title">Offline mode</string>
	<string name="settings_offlinemode_off">Content will be downloaded from the Internet</string>
	<string name="settings_offlinemode_on">Internet access disabled</string>
	
	<!-- Custom -->
	<string name="toast_page_list_refreshed">Page list refreshed</string>
	<string name="toast_page_view_refreshed">Page content refreshed</string>
	<string name="toast_recentchanges_list_refreshed">Recent changes list refreshed</string>
	<string name="toast_addon_from_cache">from the cache</string>
	<string name="toast_addon_from_internet">from the Internet</string>
	<string name="title_activity_page_view">View</string>
	<string name="nav_pageview_view">View</string>
	<string name="nav_pageview_edit">Edit</string>
	<string name="nav_pageview_history">History</string>
	<string name="error_no_page_name_specified">No page name specified</string>
	<string name="error_no_wiki_name_specified">No wiki name specified</string>
	
	<string name="error_failed_load_page_content">Error: Failed to load content for page \'%1$s\'</string>
	<string name="error_failed_load_page_source">Error: Failed loading page source: %1$s</string>
	<string name="error_redlink">The page \'%1$s\' doesn\'t exist</string>
	<string name="navdrawer_main_add_wiki">Add Wiki</string>
	<string name="navdrawer_main_settings">Settings</string>
	<string name="navdrawer_main_credits">Credits</string>
	<string name="title_activity_add_wiki">Add Wiki</string>
	<string name="prompt_username">Username</string>
	<string name="prompt_password">Password</string>
	<string name="action_add_wiki">Add Wiki</string>
	<string name="action_add_wiki_short">Add Wiki</string>
	<string name="connection_untested">Oops! Something went wrong when trying to test the connection. This is a bug - please contact the developer.</string>
	<string name="connection_failed">❌ A connection error occurred. Is the URL correct?</string>
	<string name="login_required" tools:ignore="Typos">✅ Connection ok, but a login is required and has not yet been provided</string>
	<string name="login_failed">❌ Login failed: Invalid username or password </string>
	<string name="connection_ok" tools:ignore="Typos">✅ Connection ok!</string>
	<string name="prompt_url">URL</string>
	<string name="prompt_display_name">Display Name</string>
	<string name="test_connection">Test Connection</string>
	<string name="filter_start_typing">Start typing to filter</string>
	<string name="description_recent_change_item_icon">Recent change item icon</string>
	<string name="recent_change_user_by">By {0}</string>
	<string name="recent_change_move_details">From {0}</string>
	<string name="human_time_since_ago">{0} ago</string>
	<string name="add_wiki_welcome">Connect to an existing Pepperminty Wiki server.</string>
	<string name="pagelist_list_icon_description_default">page</string>
	<string name="search_list_item_icon">Search list item icon</string>
	<string name="editor_button_save">Save</string>
	<string name="editor_toast_error_offline">You\'re offline, but editing pages requires you to be online.</string>
	<string name="editor_toast_error_nopagename">Error: You\'re not currently viewing a page. This is a bug.</string>
	<string name="editor_title"><![CDATA[%1$s ▶ Edit]]></string>
	<string name="error_failed_acquire_edit_key"><![CDATA[Error: Failed to acquire edit key for page \'%1$s\'.]]></string>
	<string name="editor_label_tags">Tags:</string>
	<string name="wikiresult_error_outdatedserver"><![CDATA[Your server version is outdated. Please update it to at least Pepperminty Wiki %1$s.]]></string>
	<string name="wikiresult_error_unknown">An unknown error occurred.</string>
	<string name="wikiresult_error_network">A network error occurred.</string>
	<string name="wikiresult_error_networknocache">A network error occurred, and when I tried to check the cache I found it empty.</string>
	<string name="error_failed_load_tag_list"><![CDATA[Error: Failed to load tag list: %1$s]]></string>
	<string name="editor_save_no_edit_key_found">Saving error: No edit key found.</string>
	<string name="wikiresult_error_permissions">You do not have permission to edit this page.</string>
	<string name="wikiresult_error_server">The server is currently experiencing an error.</string>
	<string name="wikiresult_error_unknownclient">The server claimed our request was malformed, and we don\'t know why.</string>
	<string name="wikiresult_error_pageprotected">This page is protected, and you do not have permission to edit it.</string>
	<string name="wikiresult_error_noeditsallowed">This wiki does not allow edits.</string>
	<string name="wikiresult_error_edit_conflict">There was an edit conflict, and edit conflict resolution is not yet implemented.</string>
	<string name="editor_main_label_hint">Page content:</string>
	<string name="manage_wikis">manage_wikis</string>
	<string name="navdrawer_main_manage_wikis">Manage Wikis</string>
	<string name="title_activity_manage_wikis">Manage Wikis</string>
	<string name="managewikis_action_wiki_wikiname_removed">Wiki {0} removed</string>
	<string name="wik_list_icon_connection_status_placeholder">Connection status will be shown here.</string>
	<string name="action_remove_wiki">Remove Wiki</string>
</resources>