<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <PreferenceCategory app:title="@string/data_header">
        
        <Preference
            app:key="comment"
            app:title="Settings are work-in-progress" />
        
<!--        <EditTextPreference-->
<!--            app:key="signature"-->
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->
    
        <Preference app:title="Manage Wikis"
            app:key="@string/manage_wikis"
            />
        
        <ListPreference
            app:key="load_images"
            app:defaultValue="always"
            app:entries="@array/settings_load_images_entries"
            app:entryValues="@array/settings_load_images_values"
            app:title="@string/settings_load_images_title"
            app:useSimpleSummaryProvider="true" />
    
    
        <SwitchPreferenceCompat
            app:key="offlinemode"
            app:title="@string/settings_offlinemode_title"
            app:summaryOff="@string/settings_offlinemode_off"
            app:summaryOn="@string/settings_offlinemode_on" />
        
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance_header">
        
        <ListPreference
            app:key="theme"
            app:defaultValue="use_system"
            app:entries="@array/settings_theme_entries"
            app:entryValues="@array/settings_theme_values"
            app:title="@string/settings_theme_title"
            app:useSimpleSummaryProvider="true" />
        
    </PreferenceCategory>
    
</PreferenceScreen>