<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:id="@+id/navdrawer_main_wikilist">
		<!-- Wikis go in here -->
	</group>
	
	<group android:id="@+id/navdrawer_main_wiki_options">
		<item android:id="@+id/navdrawer_main_add_wiki"
			android:icon="@drawable/icon_add"
			android:title="@string/navdrawer_main_add_wiki"
			android:orderInCategory="9990" />
	</group>
	
	<group android:id="@+id/navdrawer_main_app_options">
		<item android:id="@+id/navdrawer_main_settings"
			android:icon="@drawable/icon_settings"
			android:title="@string/navdrawer_main_settings"
			android:orderInCategory="9995" />
		
		<item android:id="@+id/navdrawer_main_credits"
			android:icon="@drawable/icon_credits"
			android:title="@string/navdrawer_main_credits"
			android:orderInCategory="10000" />
	</group>

</menu>