<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/navigation_page"
	app:startDestination="@+id/navigation_pageview">
	
	<fragment
		android:id="@+id/navigation_pageview"
		android:name="com.sbrl.peppermint.ui.pageview.PageViewFragment"
		android:label="@string/nav_pageview_view"
		tools:layout="@layout/fragment_pageview" />
	
	<fragment
		android:id="@+id/navigation_edit"
		android:name="com.sbrl.peppermint.ui.edit.EditFragment"
		android:label="@string/nav_pageview_edit"
		tools:layout="@layout/fragment_edit" />
	
	<fragment
		android:id="@+id/navigation_history"
		android:name="com.sbrl.peppermint.ui.history.HistoryFragment"
		android:label="@string/nav_pageview_history"
		tools:layout="@layout/fragment_history" />
	
</navigation>